updating horseplay urls

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -60,9 +60,9 @@ import Layout from '../layouts/Layout.astro';
     <section>
       <h2>Side Projects</h2>
       <ul class="project-list">
-        <li><a href="https://gryd.fun">gryd</a> <span>— A deceptively simple, progressively difficult tapping game</span></li>
-        <li><a href="https://vrbl.fun">vrbl</a> <span>— Like Boggle, but harder</span></li>
-        <li><a href="https://d3c0d3.fun">d3c0d3</a> <span>— Speed CAPTCHA</span></li>
+        <li><a href="https://gryd.horseplaygames.com/">gryd</a> <span>— A deceptively simple, progressively difficult tapping game</span></li>
+        <li><a href="https://vrbl.horseplaygames.com/">vrbl</a> <span>— Like Boggle, but harder</span></li>
+        <li><a href="https://d3c0d3.horseplaygames.com/">d3c0d3</a> <span>— Speed CAPTCHA</span></li>
         <li><a href="https://opensea.io/thehilker/created">OpenSea</a> <span>— Photography NFTs</span></li>
         <li><a href="https://opensea.io/collection/glitch-reality-2">Glitch Reality</a> <span>— Generative NFT collection</span></li>
       </ul>
