Refactor text and headings in index.astro

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,7 @@ import Layout from '../layouts/Layout.astro';
         I get pumped about shaping perspectives and systems in order to overcome challenges and make the most of opportunities. I'm often addressing alignment issues, scratching itches, and learning how to slow down faster.
       </p>
       <p>
-        I've got an amazing wife, four incredible kids, two dogs, and four cats. We live on a big yard where we grow various flowers, fruits, vegetables, and weeds.
+        I've got an amazing wife, four incredible kids, two dogs, and four cats.
       </p>
       <p>
         I'm one who hopes in Jesus but struggles greatly to consistently live into that reality; I'm thankful for grace and small wins.
@@ -33,11 +33,10 @@ import Layout from '../layouts/Layout.astro';
     <hr />
 
     <section>
-      <h2>Ideas I play with</h2>
+      <h2>Ideas I come back to often</h2>
 
       <div class="thing">
         <h3>Asymmetric Attention</h3>
-        <p>The phenomenon of unintentionally minimizing the work and contribution of others. It's like seeing their work through a keyhole, assuming that whatever we can see through that keyhole is all that exists. This is why we ask others, "How hard can it be?"</p>
       </div>
 
       <div class="thing">
@@ -46,7 +45,7 @@ import Layout from '../layouts/Layout.astro';
       </div>
 
       <div class="thing">
-        <h3>Organizational Overhead</h3>
+        <h3><a href="/posts/aa>"Organizational Overhead</a></h3>
         <p>The cost of working in or with any organization. Politics, processes, systems, technology, etc.</p>
       </div>
 
@@ -76,22 +75,22 @@ import Layout from '../layouts/Layout.astro';
 
       <div class="thing">
         <h3><a href="https://www.levi.com/US/en_US/jeans-by-fit-number/men/jeans/511/c/levi_jeans_by_fit_number_men_jeans_511">Levi's 511 jeans</a></h3>
-        <p>Comfortable and inexpensive enough to not care about them getting ruined.</p>
+        <p>Comfortable in all kinds of work.</p>
       </div>
 
       <div class="thing">
         <h3>Diner-style mugs</h3>
-        <p>The right size (300ml of coffee with 20g of grounds), sits well in your hands, and has nice insulative properties. I look for them in every coffee shop.</p>
+        <p>The right size (300ml of coffee with 20g of grounds), sits well in your hands, and has nice insulative properties. Despite an already large collection, I look for them in every coffee shop.</p>
       </div>
 
       <div class="thing">
         <h3><a href="https://www.oxo.com/pour-over-coffee-maker-with-water-tank.html">OXO Pourover</a></h3>
-        <p>Pour the water all at once and find the filters anywhere. The plastic is great for home and camping.</p>
+        <p>Pour the water all at once and find the filters anywhere.</p>
       </div>
 
       <div class="thing">
         <h3><a href="https://www.leuchtturm1917.us/classic-notebooks-1.html">Leuchtturm Classic Notebook</a></h3>
-        <p>Outstanding paper feel. The gray dot is perfect — supportive for structure, but not so visible that it interrupts freeform sketches.</p>
+        <p>Outstanding paper feel. The gray dot is perfect: supportive for structure, but not so visible that it interrupts freeform sketches.</p>
       </div>
     </section>
 
